gcc-defaults (1.62) unstable; urgency=low

  * Dont build libgcj-bc on the Hurd (Michael Banck). Closes: #445279.
  * (Build-)depend on gcc-4.2 (>= 4.2.2-3).
  * Make gpc-2.1 based on GCC-4.1 the default.
  * Make GCC-4.2 the default on m68k. Closes: #451190.

 -- Matthias Klose <doko@debian.org>  Tue, 25 Dec 2007 19:43:38 +0100

gcc-defaults (1.61) unstable; urgency=medium

  * libgcj-common: Update classmap db's for gcj-4.3 as well.
  * Do not build g77 and g77-doc for armel.
  * gcj: Install gc-analyze symlinks where the default is >= 4.2.

 -- Matthias Klose <doko@debian.org>  Tue, 04 Sep 2007 02:41:40 +0200

gcc-defaults (1.60) unstable; urgency=low

  * Make GCC-4.2 the default for C, C++, ObjC, ObjC++, GFortran for
    all architectures except m68k.

 -- Matthias Klose <doko@debian.org>  Sat, 01 Sep 2007 11:56:19 +0200

gcc-defaults (1.59) unstable; urgency=low

  * Make GCJ-4.2 the default on hppa.

 -- Matthias Klose <doko@debian.org>  Tue, 28 Aug 2007 00:58:50 +0200

gcc-defaults (1.58) unstable; urgency=low

  * Keep GCJ-4.1 as the default for alpha.

 -- Matthias Klose <doko@debian.org>  Sun, 26 Aug 2007 13:29:19 +0200

gcc-defaults (1.57) unstable; urgency=low

  * Fix version requirement in libgcj-bc shlibs file.

 -- Matthias Klose <doko@debian.org>  Fri, 24 Aug 2007 17:02:34 +0200

gcc-defaults (1.56) unstable; urgency=medium

  * Revert gnat to depend on gnat-4.1 as the transition to gnat-4.2
    has not yet started.  Closes: #431103.
  * Don't provide the gccbug symlinks anymore.
  * Don't build gnat for armel. Closes: #408808.
  * Don't install gij-wrapper symlink. Closes LP: #118464.
  * Add symlink for grmic.
  * Keep GCC-4.1 as the default for C, C++, ObjC, ObjC++.
  * GCJ-4.2 is the default for all architectures but hppa and m68k.
  * Don't build the lib32gcj-bc package anymore.

 -- Matthias Klose <doko@debian.org>  Fri, 24 Aug 2007 00:40:47 +0200

gcc-defaults (1.55) experimental; urgency=low

  * Make GCC-4.2 the default for Java.
