@@ -238,3 +238,13 @@ Description: The GNU Ada compiler
  This is a dependency package providing the default GNU Ada compiler.
  Per policy, all packages that contain Ada sources must use this package
  in their Build-Depends line.
+
+Package: gdc
+Priority: optional
+Architecture: any
+Depends: gdc-${pv:gdc} ${reqv:gdc}
+Replaces: gdc-4.1 (<< 0.25-4.1.2-18)
+Description: The D compiler
+ This is a dependency package providing the default D compiler.
+ Per policy, all packages that contain D sources must use this package
+ in their Build-Depends line.
