@@ -4,8 +4,9 @@ gcc-defaults (1.62) unstable; urgency=low
   * (Build-)depend on gcc-4.2 (>= 4.2.2-3).
   * Make gpc-2.1 based on GCC-4.1 the default.
   * Make GCC-4.2 the default on m68k. Closes: #451190.
+  * Add gdc, make gdc-4.1 the default (Arthur Loiret). Closes: #456596.
 
- -- Matthias Klose <doko@debian.org>  Tue, 25 Dec 2007 19:43:38 +0100
+ -- Matthias Klose <doko@debian.org>  Tue, 25 Dec 2007 19:58:38 +0100
 
 gcc-defaults (1.61) unstable; urgency=medium
 
